--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Camping World - RV Rentals" />
+    <meta name="description" content="Car rental" />
     <title>Car rental</title>
 
   </head>
