--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -14,8 +14,7 @@
 
     <script
       id="rv-rentals-widget"
-      src="https://atlantis.cw-rv.dev.quintegro.net/assets/white-label/widget.min.js"
-      src1="http://localhost:3000/white-label/widget.min.js"
+      src="http://localhost:3000/white-label/widget.min.js"
       data-owner-id="123"
       data-theme="dark"
     ></script>
