--- a/widget-index.html
+++ b/widget-index.html
@@ -14,7 +14,7 @@
 
     <script
       id="rv-rentals-widget"
-      src="https://cw-rv.dev.quintegro.net/white-label/widget.min.js"
+      src="https://cw-rv.dev.quintegro.net/assets/white-label/widget.min.js"
       data-owner-id="123"
       data-theme="dark"
     ></script>
