--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -16,7 +16,7 @@
       id="rv-rentals-widget"
       src="http://localhost:3000/white-label/widget.min.js"
       data-owner-id="123"
-      data-theme="dark"
+      data-theme="white"
     ></script>
 
     <p>
