--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -17,7 +17,7 @@
       src="http://localhost:3000/white-label/widget.min.js"
       data-owner-id="123"
       data-theme="dark"
-      data-title="Booking"
+      data-title="White Label Booking"
     ></script>
 
     <p>
