--- a/widget-index.html
+++ b/widget-index.html
@@ -17,6 +17,7 @@
       src="https://cw-rv.dev.quintegro.net/assets/white-label/widget.min.js"
       data-owner-id="123"
       data-theme="dark"
+      data-title="White Label Booking"
     ></script>
 
     <p>
