--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -15,7 +15,7 @@
     <script
       id="rv-rentals-widget"
       src="http://localhost:3000/white-label/widget.min.js"
-      data-directory="test"
+      data-owner-id="test"
       data-theme="dark"
       data-title="White Label Booking"
     ></script>
