--- a/widget-index.html
+++ b/widget-index.html
@@ -15,7 +15,7 @@
     <script
       id="rv-rentals-widget"
       src="https://atlantis.cw-rv.dev.quintegro.net/assets/white-label/widget.min.js"
-      data-directory="test"
+      data-owner-id="test"
       data-theme="dark"
       data-title="White Label Booking"
     ></script>
