--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -16,7 +16,7 @@
       id="rv-rentals-widget"
       src="http://localhost:3000/white-label/widget.min.js"
       data-owner-id="test"
-      data-theme="dark"
+      data-theme="light"
       data-title="White Label Booking"
     ></script>
 
