--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -17,7 +17,7 @@
       src="http://localhost:3000/white-label/widget.min.js"
       data-owner-id="test"
       data-theme="light"
-      data-title=""
+      data-title="fsdkjfslksjkf"
     ></script>
 
     <p>
