--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -17,9 +17,16 @@
       src="http://localhost:3000/white-label/widget.min.js"
       data-owner-id="test"
       data-theme="light"
-      data-title="fsdkjfslksjkf"
+      data-title="one"
     ></script>
 
+    <script
+      id="rv-rentals-widget"
+      src="http://localhost:3000/white-label/widget.min.js"
+      data-owner-id="test"
+      data-theme="light"
+      data-title="two"
+    ></script>
     <p>
       Call by phone 8-000-000-000
     </p>
