--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -13,7 +13,7 @@
     <h1>Cars for rent</h1>
 
     <script
-      id="rv-rentals-widget"
+      class="rv-rentals-widget"
       src="http://localhost:3000/white-label/widget.min.js"
       data-owner-id="test"
       data-theme="light"
@@ -21,7 +21,7 @@
     ></script>
 
     <script
-      id="rv-rentals-widget"
+      class="rv-rentals-widget"
       src="http://localhost:3000/white-label/widget.min.js"
       data-owner-id="test"
       data-theme="light"
