--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -13,20 +13,13 @@
     <h1>Cars for rent</h1>
 
     <script
-      class="rv-rentals-widget"
+      id="rv-rentals-widget"
       src="http://localhost:3000/white-label/widget.min.js"
       data-owner-id="test"
       data-theme="light"
       data-title="one"
     ></script>
 
-    <script
-      class="rv-rentals-widget"
-      src="http://localhost:3000/white-label/widget.min.js"
-      data-owner-id="test"
-      data-theme="dark"
-      data-title="two"
-    ></script>
     <p>
       Call by phone 8-000-000-000
     </p>
