--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -19,7 +19,13 @@
       data-theme="light"
       data-title="one"
     ></script>
-
+    <script
+      id="rv-rentals-widget"
+      src="http://localhost:3000/white-label/widget.min.js"
+      data-owner-id="test"
+      data-theme="light"
+      data-title="one"
+    ></script>
     <p>
       Call by phone 8-000-000-000
     </p>
