--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -13,14 +13,14 @@
     <h1>Cars for rent</h1>
 
     <script
-      id="rv-rentals-widget"
+      class="rv-rentals-widget"
       src="http://localhost:3000/white-label/widget.min.js"
       data-owner-id="test"
       data-theme="light"
       data-title="one"
     ></script>
     <script
-      id="rv-rentals-widget"
+      class="rv-rentals-widget"
       src="http://localhost:3000/white-label/widget.min.js"
       data-owner-id="test"
       data-theme="light"
