--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -23,8 +23,8 @@
       class="rv-rentals-widget"
       src="http://localhost:3000/white-label/widget.min.js"
       data-owner-id="test"
-      data-theme="light"
-      data-title="one"
+      data-theme="dark"
+      data-title="two"
     ></script>
     <p>
       Call by phone 8-000-000-000
