--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -13,6 +13,7 @@
     <h1>Cars for rent</h1>
 
     <script
+      async
       class="rv-rentals-widget"
       src="http://localhost:3000/white-label/widget.min.js"
       data-owner-id="test"
@@ -20,6 +21,7 @@
       data-title="one"
     ></script>
     <script
+      async
       class="rv-rentals-widget"
       src="http://localhost:3000/white-label/widget.min.js"
       data-owner-id="test"
