--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -11,23 +11,26 @@
   <body>
 
     <h1>Cars for rent</h1>
-
-    <script
-      async
-      class="rv-rentals-widget"
-      src="http://localhost:3000/white-label/widget.min.js"
-      data-owner-id="test"
-      data-theme="light"
-      data-title="one"
-    ></script>
-    <script
-      async
-      class="rv-rentals-widget"
-      src="http://localhost:3000/white-label/widget.min.js"
-      data-owner-id="test"
-      data-theme="dark"
-      data-title="two"
-    ></script>
+    <div>
+      <script
+        async
+        class="rv-rentals-widget"
+        src="http://localhost:3000/white-label/widget.min.js"
+        data-owner-id="test"
+        data-theme="light"
+        data-title="one"
+      ></script>
+      </div>
+    <div>
+      <script
+        async
+        class="rv-rentals-widget"
+        src="http://localhost:3000/white-label/widget.min.js"
+        data-owner-id="test"
+        data-theme="dark"
+        data-title="two"
+      ></script>
+      </div>
     <p>
       Call by phone 8-000-000-000
     </p>
