--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -11,7 +11,7 @@
   <body>
 
     <h1>Cars for rent</h1>
-    <div>
+    <div class="one">
       <script
         async
         class="rv-rentals-widget"
@@ -21,7 +21,7 @@
         data-title="one"
       ></script>
       </div>
-    <div>
+    <div class="two">
       <script
         async
         class="rv-rentals-widget"
