--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -14,7 +14,7 @@
     <div class="one">
       <script
         class="rv-rentals-widget"
-        src="http://localhost:3000/white-label/widget.min.js"
+        src="https://atlantis.cw-rv.dev.quintegro.net/white-label/widget.min.js"
         data-owner-id="test"
         data-theme="light"
         data-title="one"
