--- a/widget-index.html
+++ b/widget-index.html
@@ -13,7 +13,8 @@
     <h1>Cars for rent</h1>
 
     <script
-      id="rv-rentals-widget"
+      async
+      class="rv-rentals-widget"
       src="https://atlantis.cw-rv.dev.quintegro.net/assets/white-label/widget.min.js"
       data-owner-id="test"
       data-theme="dark"
