--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -13,8 +13,9 @@
     <h1>Cars for rent</h1>
     <div class="one">
       <script
+        async
         class="rv-rentals-widget"
-        src="https://atlantis.cw-rv.dev.quintegro.net/white-label/widget.min.js"
+        src="http://localhost:3000/assets/white-label/widget.min.js"
         data-owner-id="test"
         data-theme="light"
         data-title="one"
