--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -15,7 +15,7 @@
       <script
         async
         class="rv-rentals-widget"
-        src="http://localhost:3000/assets/white-label/widget.min.js"
+        src="http://localhost:3000/white-label/widget.min.js"
         data-owner-id="test"
         data-theme="light"
         data-title="one"
