--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -17,7 +17,7 @@
         class="rv-rentals-widget"
         src="http://localhost:3000/white-label/widget.min.js"
         data-owner-id="test"
-        data-theme="light"
+        data-theme="dark"
         data-title="one"
       ></script>
       </div>
