--- a/widget-index.html
+++ b/widget-index.html
@@ -17,7 +17,7 @@
       class="rv-rentals-widget"
       src="https://atlantis.cw-rv.dev.quintegro.net/assets/white-label/widget.min.js"
       data-owner-id="test"
-      data-theme="dark"
+      data-theme="light"
       data-title="White Label Booking"
     ></script>
 
