--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -99,6 +99,17 @@
         data-title="one"
       ></script>
       </div>
+    
+        <div class="white-label-widget-container">
+      <script
+        async
+        class="rv-rentals-widget"
+        src="http://localhost:3000/white-label/widget.min.js"
+        data-owner-id="test"
+        data-theme="light"
+        data-title="Two"
+      ></script>
+      </div>
 
     <p>
       Call by phone 8-000-000-000
