--- a/widget-index.html
+++ b/widget-index.html
@@ -84,12 +84,26 @@
      position: relative;
      min-height: 708px;
   }
+      .white-label-widget-spinner-container {
+        background: none !important;
+      }
     </style>
   </head>
   <body>
 
     <h1>Cars for rent</h1>
     <div class="white-label-widget-container">
+    <script
+      async
+      class="rv-rentals-widget"
+      src="https://atlantis.cw-rv.dev.quintegro.net/assets/white-label/widget.min.js"
+      data-owner-id="test"
+      data-theme="dark"
+      data-title="White Label Booking"
+    ></script>
+    </div>
+    
+        <div class="white-label-widget-container">
     <script
       async
       class="rv-rentals-widget"
