--- a/widget-index.html
+++ b/widget-index.html
@@ -100,9 +100,9 @@
     </div>
     
     <div class="white-label-widget-container">
-      <div class="white-label-widget-spinner spinner-back active">
-        <div class="spinner spinner--absolute">
-          <div class="spinner__icon"></div>
+      <div class="white-label-widget-spinner white-label-widget-spinner--spinner-back active">
+        <div class="white-label-widget-spinner__inner white-label-widget-spinner--absolute">
+          <div class="white-label-widget-spinner__icon"></div>
         </div>
       </div>
       <script
