--- a/widget-index.html
+++ b/widget-index.html
@@ -74,6 +74,9 @@
    position: relative;
    min-height: 708px;
 }
+.white-label-widget-container--dark-theme {
+  background: #474342;
+}
       
 .white-label-widget-spinner--dark-theme {
   background: none;
@@ -83,7 +86,7 @@
   <body>
 
     <h1>Cars for rent</h1>
-    <div class="white-label-widget-container">
+    <div class="white-label-widget-container white-label-widget-container--dark-theme">
       <div class="white-label-widget-spinner white-label-widget-spinner--spinner-back white-label-widget-spinner--dark-theme active">
         <div class="white-label-widget-spinner__inner white-label-widget-spinner--absolute">
           <div class="white-label-widget-spinner__icon"></div>
