--- a/widget-index.html
+++ b/widget-index.html
@@ -95,7 +95,7 @@
       <script
         async
         class="rv-rentals-widget"
-        src="https://atlantis.cw-rv.dev.quintegro.net/assets/white-label/widget.min.js"
+        src="https://cw-rv.dev.quintegro.net/assets/white-label/widget.min.js"
         data-owner-id="test"
         data-theme="dark"
         data-title="White Label Booking"
@@ -111,7 +111,7 @@
       <script
         async
         class="rv-rentals-widget"
-        src="https://atlantis.cw-rv.dev.quintegro.net/assets/white-label/widget.min.js"
+        src="https://cw-rv.dev.quintegro.net/assets/white-label/widget.min.js"
         data-owner-id="test"
         data-theme="light"
         data-title="White Label Booking"
