--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -87,14 +87,14 @@
   <body>
 
     <h1>Cars for rent</h1>
-      <script
+<!--       <script
         async
         class="rv-rentals-widget"
         src="http://localhost:3000/white-label/widget.min.js"
         data-owner-id="test"
         data-theme="dark"
         data-title="White Label Booking"
-      ></script>
+      ></script> -->
  
     
     <div class="white-label-widget-container white-label-widget-container--dark-theme">
