--- a/white-label-owner-widget.html
+++ b/white-label-owner-widget.html
@@ -107,7 +107,7 @@
         async
         class="rv-rentals-widget"
         src="http://localhost:3000/white-label/widget.min.js"
-        data-owner-id="ErmokhinaN"
+        data-owner-id="test"
         data-theme="light"
         data-title="White Label Booking"
       ></script>
