--- a/widget-index.html
+++ b/widget-index.html
@@ -108,13 +108,12 @@
           <div class="white-label-widget-spinner__icon"></div>
         </div>
       </div>
-      <script
-        async
-        class="rv-rentals-widget"
-        src="https://cw-rv.dev.quintegro.net/assets/white-label/widget.min.js"
-        data-owner-id="test"
-        data-theme="light"
-        data-title="White Label Booking"
+      <script 
+        async class="rv-rentals-widget" 
+        src="https://cw-rv.dev.quintegro.net/assets/white-label/widget.min.js" 
+        data-owner-id="misha" 
+        data-theme="light" 
+        data-title="Test Mikhail"
       ></script>
     </div>
     <p>
