--- a/widget-index.html
+++ b/widget-index.html
@@ -111,7 +111,7 @@
 <script async class="rv-rentals-widget" 
 src="https://challenger.cw-rv.dev.quintegro.net/assets/white-label/widget.min.js" 
 data-owner-id="12" 
-data-theme="light" 
+data-theme="dark" 
 data-title=""
 ></script>
     </div>
