--- a/widget-index.html
+++ b/widget-index.html
@@ -92,14 +92,12 @@
           <div class="white-label-widget-spinner__icon"></div>
         </div>
       </div>
-      <script
-        async
-        class="rv-rentals-widget"
-        src="https://cw-rv.dev.quintegro.net/assets/white-label/widget.min.js"
-        data-owner-id="test"
-        data-theme="dark"
-        data-title="White Label Booking"
-      ></script>
+<script async class="rv-rentals-widget" 
+src="http://localhost:4000/assets/white-label/widget.min.js" 
+data-owner-id="12" 
+data-theme="dark" 
+data-title=""
+></script>
     </div>
     
     <div class="white-label-widget-container">
