--- a/widget-index.html
+++ b/widget-index.html
@@ -93,9 +93,9 @@
         </div>
       </div>
 <script async class="rv-rentals-widget" 
-src="http://localhost:4000/assets/white-label/widget.min.js" 
+src="https://challenger.cw-rv.dev.quintegro.net/assets/white-label/widget.min.js" 
 data-owner-id="12" 
-data-theme="dark" 
+data-theme="light" 
 data-title=""
 ></script>
     </div>
