--- a/widget-index.html
+++ b/widget-index.html
@@ -107,7 +107,7 @@ data-title=""
         </div>
       </div>
 <script async class="rv-rentals-widget" 
-src="https://challenger.cw-rv.dev.quintegro.net/assets/white-label/widget.min.js" 
+src="https://www.rvrentals.com/assets/white-label/widget.min.js" 
 data-owner-id="12" 
 data-theme="dark" 
 data-title=""
